tests/baselines/reference/jsFileCompilationTypeSyntaxOfVar.errors.txt
error TS5055: Cannot write file 'a.js' because it would overwrite input file.
  Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
a.js(1,8): error TS8010: Type annotations can only be used in TypeScript files.


!!! error TS5055: Cannot write file 'a.js' because it would overwrite input file.
!!! error TS5055:   Adding a tsconfig.json file will help organize projects that contain both TypeScript and JavaScript files. Learn more at https://aka.ms/tsconfig.
==== a.js (1 errors) ====
    var v: () => number;
           ~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.